# wafer-stage

./: .gitignore  CMakeLists.txt  README.md  STYLE.md  main.cpp  task.md
modules/: coremem.cpp  input.cpp  logger.cpp  sim.cpp
modules/renderer/: renderer.cpp  renderer_impl.cpp
modules/wafer/: triangular_profile_impl.cpp  wafer.cpp  wafer_impl.cpp  wafer_stage_impl.cpp
